# cp-mod-ref-2019-patchwork

./: .gitignore  LICENSE  README.md
code/: CMakeLists.txt
code/src/: CMakeLists.txt  test-game-play-statistics.cpp  test-placements.cpp
code/src/patchwork/: CMakeLists.txt  board.h  lib.cpp  lib.h  symmetry.h  tiles.cpp  tiles.h
